# mindkeep

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NEXT-STEPS.md  PUBLISH.md  README.md  RELEASE-NOTES.md  SHA256SUMS  SHARE.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: AUTOLOAD-SETUP.md  DESIGN-v0.3.0.md  DESIGN-v0.4.0.md  FAQ.md  GETTING-STARTED.md  GETTING-STARTED.zh.md  INSTALL.md  README.md  TROUBLESHOOTING.md  UNINSTALL.md  USAGE.md
docs/releases/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.2.0.md
src/mindkeep/: __init__.py  __main__.py  _diagnostics.py  _integrations.py  _session.py  _tokens.py  cli.py  integration.py  memory_api.py  models.py  project_id.py  scheduler.py  security.py  storage.py
src/mindkeep/evals/: __init__.py  __main__.py  runner.py  scenarios.py
src/mindkeep/evals/fixtures/: corpus.json
src/mindkeep/mcp/: __init__.py  resources.py  server.py  tools.py  tools_pin.py  tools_write.py
tests/: _crash_child.py  test_aliases.py  test_cli.py  test_crash.py  test_doctor.py  test_evals.py  test_integrate.py  test_integration.py  test_mcp_pin_unpin.py  test_mcp_read_tools.py  test_mcp_resources.py  test_mcp_skeleton.py  test_mcp_write_tools.py  test_memory_api.py  test_pin.py  test_project_id.py  test_recall.py  test_scheduler.py  test_security.py  test_session_budget.py  test_show_top_budget.py  test_stats.py  test_storage.py  test_write_guard.py
